# novel-studio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
benchmarks/: _README.md
docs/: ARCHITECTURE.md  INSPIRATION_MAP.md  ROADMAP.md  TRAINING_METHODOLOGY.md
inputs/: _EXAMPLE_xianxia.md  _TEMPLATE.md
inspirations/: _README.md
src/novel_studio/: __init__.py  audit.py  cli.py  engine.py  mcp_server.py  prompts.py  slop_check.py  state.py  utils.py
src/novel_studio/benchmark/: __init__.py  judge.py  premise_extractor.py  prompts.py  runner.py  schemas.py
src/novel_studio/inspiration/: __init__.py  ingester.py  retriever.py  schemas.py
src/novel_studio/llm/: __init__.py  anthropic.py  base.py  doubao.py  factory.py  human_queue.py  stub.py
styles/: _README.md  _anti_slop.md  inspiration_routing.json  仙侠.md  历史.md  奇幻.md  志怪.md  悬疑.md  日轻.md  武侠.md  科幻.md  都市.md
tests/: test_audit.py  test_benchmark.py  test_engine.py  test_providers.py  test_slop_check.py  test_state.py
